<resources>
    <string name="app_name">CompuActualFCM</string>
    <string name="ingresar">Ingresar</string>
    <string name="aun_no_te_has_registrado">¿Aun no te has registrado?</string>
    <string name="password">Password</string>
    <string name="inicio_de_sesion">CompuActual</string>
    <string name="email">Email</string>
    <string name="logout">Cerrar sesion</string>
    <string name="Equipos">Mis Equipos</string>
    <string name="welcome">Bienvenido a CompuActual</string>
    <string name="Miscitasmedicas">Mis equipos</string>
    <string name="press_back_again">Precione una vez mas para salir</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="default_channel">default_channel</string>

</resources>