<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="12dp"
    android:orientation="vertical"
    tools:context=".MenuActiviy">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/welcome"
        android:textAppearance="@style/ShapeAppearance.Material3.LargeComponent"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/btnEquipos"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/Equipos"
        android:textColor="@color/Bu" />

    <Button
        android:id="@+id/btnLogout"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/logout"
        android:textColor="@color/Bu" />


</LinearLayout>